--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div id="main-container">
+    <div class="mainContainer">
         <h3>Etch-a-Sketch</h3>
         <div id="sketch-container"></div>
-        
-        <div id="button-container">
-            <button id="clear-button">Clear</button>
-        </div>
     </div>
     
 </body>
